# localmask

./: .gitignore  .pre-commit-hooks.yaml  BENCHMARK-REAL-CORPUS.md  CHANGELOG.md  FINANCE.md  LICENSE  MCP-SETUP.md  PUBLISH.md  README.md  action.yml  bench_creddata.py  bench_pii.py  bench_secretbench.py  cli.py  creddata_results_v4.json  licensing.py  mcp_server.py  ner_scanner.py  proxy.example.yaml  pyproject.toml  regex_rules_safe.py  requirements.txt  server_core.py  test_oss.py
bench/recall/: .gitignore  README.md  extract_gl.py  gen_corpus.py  run_bench.py  validate_gl.py
examples/: github-workflow.yml
localmask/: __init__.py  _edition.py  ask_local.py  engine.py  gitops.py  masking.py  money.py  ner_patterns.json  netpolicy.py  publish.py  regex_patterns.json  settings_store.py  state.py  vault.py  vault_store.py
tests/: test_git_history.py  test_iban.py  test_mcp_ide_tools.py  test_modern_vendor_keys.py  test_placeholder_and_keys.py  test_uuid_sha_precision.py
