[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "localmask"
version = "0.9.2"
description = "Privacy-first secret & PII masking for code — 100% local, no phone-home."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Shai Gury", email = "feedback@localmaskpro.com" }]
keywords = [
    "secrets", "secret-scanning", "pii", "masking", "security",
    "credentials", "detect-secrets", "privacy", "mcp", "devsecops",
]
dependencies = ["pyyaml>=6.0.1", "gitpython>=3.1.40", "mcp>=1.28.0"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://www.localmaskpro.com"
Source = "https://github.com/sgury/localmask"
Issues = "https://github.com/sgury/localmask/issues"

[project.scripts]
localmask = "cli:main"
localmask-mcp = "mcp_server:main"

[tool.setuptools]
packages = ["localmask"]
py-modules = ["cli", "mcp_server", "server_core", "regex_rules_safe", "ner_scanner", "licensing"]

[tool.setuptools.package-data]
localmask = ["*.json"]
